# mcp-obsidian

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.atlas/: manifest.json
.github/workflows/: ci.yml  release.yml
src/mcp_obsidian/: __init__.py  obsidian.py  server.py  tools.py
tests/: conftest.py  test_obsidian.py  test_tools.py
