[project]
name = "mcp-obsidian"
version = "0.2.1"
description = "MCP server to work with Obsidian via the remote REST plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "mcp>=1.24.0",
 "python-dotenv>=1.0.1",
 "requests>=2.32.3",
]

[[project.authors]]
name = "Markus Pfundstein"
email = "markus@life-electronic.nl"

[[project.maintainers]]
name = "ernestkoe"
email = "ernestkoe@users.noreply.github.com"

[project.urls]
Homepage = "https://github.com/ernestkoe/mcp-obsidian"
Repository = "https://github.com/ernestkoe/mcp-obsidian"
"Original Project" = "https://github.com/MarkusPfundstein/mcp-obsidian"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "responses>=0.25.0",
    "ruff>=0.14.10",
]

[project.scripts]
mcp-obsidian = "mcp_obsidian:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
